--- a/meetingminutes.css
+++ b/meetingminutes.css
@@ -3,3 +3,27 @@ h1 {
     text-align: center;
     position: static;
 }
+
+/* class selector */
+.boxLong{
+    height: fit-content;
+
+    grid-area: main;
+    text-align: center;
+    display: block;
+    margin-top: 10px;
+    margin-bottom: 8px;
+    margin-left: 1px;
+    margin-right: 10px;
+
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 15px;
+    padding-right: 15px;
+
+    border-style: solid;
+    border-color: rgb(90, 44, 197);
+    border-radius: 4mm;
+    border-width: .01in;
+    display: block;
+}
