--- a/meetingminutes.css
+++ b/meetingminutes.css
@@ -27,3 +27,13 @@ h1 {
     border-width: .01in;
     display: block;
 }
+
+.body{
+    display: grid;
+    grid-template-columns:auto;
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "header header header header"
+    "main main . sidebar"
+    "footer footer footer footer";
+}
